2008-12-04  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (AM_CPPFLAGS): Set to $(USER_CPPFLAGS).
	(AM_CFLAGS): Set to $(USER_CFLAGS).

2008-11-03  Neal H. Walfield  <neal@gnu.org>

	* headers.m4: Don't create an empty libhurd-slab/libhurd-slab.a.

2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* headers.m4: Link files into `sysroot/include/' instead of `include/'.
	Create symbolic link to package's library in `sysroot/lib/'.
	* Makefile.am [ENABLE_TESTS]: Don't build package's library.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (AM_CPPFLAGS): Add -I$(LIBC)/include.

2005-06-22  Neal H. Walfield  <neal@gnu.org>

	* slab.h: Clean up comments.
	(SLAB_CLASS): New macro.

2005-01-06  Neal H. Walfield  <neal@gnu.org>

	* slab.h (hurd_slab_allocate_buffer_t): New type.
	(hurd_slab_deallocate_buffer_t): Likewise.
	(struct hurd_slab_space): New fields allocate_buffer and
	deallocate_buffer.
	(HURD_SLAB_SPACE_INITIALIZER): Add new arguments ALLOC and DEALLOC
	and take them into account when creating the slab.
	(hurd_slab_create): New parameters ALLOCATE_BUFFER and
	DEALLOCATE_BUFFER.
	(hurd_slab_init): Likewise.

	* slab.c (allocate_buffer): New function.
	(deallocate_buffer): Likewise.
	(reap): When deallocating a buffer, use allocate_buffer.
	(grow): When allocating or deallocating a buffer, call
	allocate_buffer or deallocate_buffer as appropriate.
	(hurd_slab_init): Add new arguments ALLOCATE_BUFFER and
	DEALLOCATE_BUFFER and take them into account when setting up
	SPACE.
	(hurd_slab_create): Likewise.

2004-11-01  Marcus Brinkmann  <marcus@gnu.org>

	* slab.c (hurd_slab_destroy): Remove unused variable PREVP.

2004-04-05  Marcus Brinkmann  <marcus@gnu.org>

	* slab.c (hurd_slab_destroy): Fix typo.
	(hurd_slab_free): Likewise.

2004-04-01  Marcus Brinkmann  <marcus@gnu.org>

	* slab.h: Include <pthread.h>.
	(hurd_slab_init): New prototype.
	(struct hurd_slab_space): Rename member inited to initialized.
	* slab.c (hurd_slab_init): New function.