@@ -1,3 +1,8 @@
+2008-11-20  Neal H. Walfield  <neal@gnu.org>
+
+	* slab.h (hurd_slab_constructor_t): Improve documentation.
+	(hurd_slab_destructor_t): Likewise.
+
 2008-12-04  Neal H. Walfield  <neal@gnu.org>
 
 	* Makefile.am (AM_CPPFLAGS): Set to $(USER_CPPFLAGS).
